# funsocket

./: .gitmodules  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
